--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   },
   "engines": {
     "node": "8.9.4",
-    "npm": "5.6.x",
-    "yarn": "1.4.0"
+    "npm": "5.6.x"
   },
   "author": "",
   "license": "ISC",
