--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "@devexpress/dx-react-core": "^1.10.5",
+    "@devexpress/dx-react-grid": "^1.10.5",
+    "@devexpress/dx-react-grid-bootstrap4": "^1.10.5",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
     "bcryptjs": "^2.4.3",
