--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^3.0.2",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^2.0.1",
+    "crypto": "^1.0.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
