--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.1"
   }
 }
