--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "react-confetti": "^3.1.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.1.2",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
     "react-scripts": "^3.0.1"
   },
   "scripts": {
